tests/snapshots/execution_spec__test-add-link-to-empty-config.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @link(src: "link-expr.graphql", type: Config) @link(src: "link-enum.graphql", type: Config) {
  query: Query
}
