tests/snapshots/execution_spec__test-batch-operator-post.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "GroupBy is only supported for GET requests",
    "trace": [
      "Query",
      "user",
      "@http"
    ],
    "description": null
  },
  {
    "message": "GroupBy can only be applied if batching is enabled",
    "trace": [
      "Query",
      "user",
      "@http"
    ],
    "description": null
  }
]
