tests/snapshots/execution_spec__test-batching-group-by.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
