tests/snapshots/execution_spec__test-cache.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
