tests/snapshots/execution_spec__test-call-operator-errors.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Query",
      "userWithoutResolver"
    ],
    "description": null
  },
  {
    "message": "call must have query or mutation",
    "trace": [
      "Post",
      "withoutOperator",
      "@call"
    ],
    "description": null
  },
  {
    "message": "no argument 'id' found",
    "trace": [
      "Post",
      "argumentMismatchGraphQL",
      "@call",
      "userWithGraphQLResolver"
    ],
    "description": null
  },
  {
    "message": "no argument 'id' found",
    "trace": [
      "Post",
      "headersMismatchGraphQL",
      "@call",
      "userWithGraphQLResolver"
    ],
    "description": null
  },
  {
    "message": "no argument 'id' found",
    "trace": [
      "Post",
      "urlMismatchHttp",
      "@call",
      "user"
    ],
    "description": null
  },
  {
    "message": "userWithoutResolver field has no resolver",
    "trace": [
      "Post",
      "withoutResolver",
      "@call"
    ],
    "description": null
  }
]
