tests/snapshots/execution_spec__test-conflict-allowed-headers.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(allowedHeaders: ["a", "b", "c", "d"]) {
  query: Query
}

type Query {
  hello: String @expr(body: "world")
}
