tests/snapshots/execution_spec__test-conflict-vars.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(vars: [{key: "a", value: "b"}, {key: "c", value: "d"}, {key: "p", value: "q"}]) {
  query: Query
}

type Query {
  hello: String @expr(body: "world")
}
